# SistemaAmbulatorialSUS

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml  rodar_pipeline.py
.github/workflows/: ci.yml
backend/: database.py  dockerfile  main.py  models.py  queries.py  router.py
data/db/: indicadores.db
data/gold/: ano_mes.parquet  cnes.parquet  cnes_proc.parquet  dim_calendario.parquet  dim_cnes.parquet  dim_proc.parquet
data/silver/: PASIA.parquet
data/silver_cnes/: PACE2401.parquet  PACE2402.parquet  PACE2403.parquet  PACE2404.parquet  PACE2405.parquet  PACE2406.parquet  PACE2407.parquet  PACE2408.parquet  PACE2409.parquet  PACE2410.parquet  PACE2411.parquet  PACE2412.parquet  PACE2501.parquet  PACE2502.parquet
docs/: Projeto.md  README2.md  README4.md  rodar.py
frontend/: app.py  dockerfile
frontend/services/: api.py
pipeline/: dockerfile
pipeline/ETL/: E0bronze.py  E1silver_cnes.py  E2silver_trat.py  E3gold.py
pipeline/load/: data_loader.py
pipeline/setup/: init_dirs.py  init_schema.py  init_sqlite.py  siadef.py  tabdim.py
requirements/: pipeline.txt
scripts/: readfile.py  readshowtab.py  siadef.py  tabdim.py  testquery.py
tests/: test_completude_mensal.py  test_quality_number_anual.py  test_quality_numbers.py  test_variacao_mensal.py
